--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,14 @@
 *{
     max-width: 1140px;
     margin: 0 auto;
+    margin-top: 30px;
 }
 body{  border: 1px solid red;
     font-family: "Azeret Mono", monospace;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
+
   
 }
 /* shared items */
@@ -93,9 +95,7 @@ font-size: 16px;
 font-weight: 400;
 } 
 /* body styles */
-body[
 
-]
 /* main items */
 .main-header{
  
@@ -222,4 +222,38 @@ background: rgba(255, 223, 0, 0.05);
     text-align: center;
     width: 852px;
 height: 115px;
+}
+/* media section */
+.media-container{
+  
+height: 777px;
+}
+.media-header{
+    text-align: center;
+    width: 852px;
+height: 115px; 
+border: 2px solid navy;
+
+}
+.media-head{
+
+height: 39px;
+color: rgb(13, 19, 33);
+
+font-size: 32px;
+font-weight: 800;
+}
+.media-paragraph{
+    color: rgb(13, 19, 33);
+
+font-size: 16px;
+font-weight: 400;
+height: 52px;
+}
+.media-section{
+    width: 1140px;
+    height: 614px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
 }
