--- a/styles/style.css
+++ b/styles/style.css
@@ -257,3 +257,54 @@ height: 52px;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
 }
+/* my next learning target */
+.my-next-target{
+max-height: 870px;
+    border: 2px goldenrod;
+   
+}
+.next-target-hd{
+    height: 115px;
+    border:2px solid violet;
+    text-align: center
+}
+.next-target-description{
+ align-items: ;
+  border: 2px solid mediumspringgreen;
+  display: flex;
+flex-direction: row;
+
+height: 220px;
+box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 16px;
+
+background: rgb(255, 255, 255);
+   
+}
+.next-img{
+    width: 94.78px;
+height: 84.41px;
+}
+.earning-item{
+    width: 941.22px;
+height: 140px;
+text-align: center;
+}
+/* footer section */
+.footer-header{
+   min-height:525px ;
+    background-image: url(../assets/handshake.jpg);
+    background-repeat: no-repeat;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    padding: 64px 48px 64px 48px;
+    background-position: center;
+    text-align: center;
+    border-radius: 16px;
+background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url(Email);
+}
+.items{
+    
+}
