--- a/styles/style.css
+++ b/styles/style.css
@@ -30,12 +30,14 @@ nav{
 display: flex;
 justify-content: space-around;
 justify-items: center;
-align-items: center;}
+align-items: center;
+}
+
 .nav-paragraph{
     width: 124px;
 height: 36px;
 color: rgb(13, 19, 33);
-border: 1px solid salmon;
+
 font-size: 26px;
 font-weight: 800;
 }
