--- a/styles/style.css
+++ b/styles/style.css
@@ -346,7 +346,12 @@ font-weight: 600;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+
 }
 .footer-items{
     height: 36px;
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
 }
